Move synced_sessions_bridge.mm from ui/ntp/recent_tabs/ to ui/sync/

So that this class could be reused by bookmark_collection_view for
keeping track of the syncing status. (and in later CL, it will show
a loading spinner when bookmark is syncing.)

Bug: 696893
Change-Id: I370c91ad1f9815c6d3c70021939140478beaebcc
Reviewed-on: https://chromium-review.googlesource.com/567786
Commit-Queue: Marti Wong <martiw@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486218}